clusters/my-cluster/apps/golang-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: golang-api
  template:
    metadata:
      labels:
        app: golang-api
    spec:
      containers:
        - name: golang-api
          image: driv/buildpack-playground-golang-api:b21.20240714.201836 # {"$imagepolicy": "flux-system:buildpack-playground-golang-api"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4444
              protocol: TCP
